# BootsAndMusketsReforged

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.sh  clean.sh  debug.sh  release.sh  run.sh  settings.json
src/: bootsAndMuskets.cpp  globals.cpp  globals.hpp  map.hpp  mapObject.cpp  mapObject.hpp  math.hpp  player.cpp  player.hpp  scene.cpp  scene.hpp  settings.cpp  settings.hpp  sprite.cpp  sprite.hpp  sprites.cpp  tileObject.cpp  tileObject.hpp  untitled_fighting_game.cpp
